Finished my first ever website

--- a/index.html
+++ b/index.html
@@ -8,17 +8,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
     <h1>Welcome To</h1>
-    <h1><span class="name-highlight">Arafat</span> Website</h1>
+    <h1><span class="orange-highlight">Arafat</span> Website</h1>
     <h3>World-class professional web devoloper</h3>
     <p>I am a Web devoloper. Ame bottomana kaj sektase. Ame onak boro web daveloper hota cai.Amer jonno sobai dowya korban jata ame valo kora kaj sekta pare. Ame ai somporaka gan lab korta cai. Ame bissas kore ame akden onak boro web diginar hobo inshallho.
     </p>
+     <a class="link-button" target="_blank" href="https://github.com/mdabgal/Aaa">HIRe Me</a>
     </div>
     <div class="half-width">
     <img src="image 1-2.png" alt="">
     </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+          <img src="image 4.png" alt=""> 
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become World's No. 1 Developer</h3>
+            <p>I am already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website.My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="https://www.youtube.com/watch?v=XpVo2UX1GtI&list=RDEMhdITv4ynjlp43l-22vpHGw&start_radio=1">go to youtube</a>
+        </div>
+    </section>
+    
+    <section class="experience-area">
+        <h2>Experiences</h2>
+       <div id="full-stack" class="half-width single-experience">
+        <h2>Full Stack Web Developer</h2>
+        <h3 class="orange-highlight">2021 - Present Pro level Web Dev</h3>
+        <p>I am the master of HTML CSS and javascript. I didn't stop with the web. I went beyond with most popular javascript framework called vue JS. I know the deployment, sever and securit. I will give you 100% web solution. </p>
+       </div>
+       <div id="baby-web" class="half-width single-experience">
+        <h2>Baby Web Developer</h2>
+        <h3 class="orange-highlight">2020-2021 Programming Hero Learner</h3>
+        <p>I am the master of HTML CSS and javascript. I didn't stop with the web. I went beyond with most popular javascript framework called vue JS. I know the deployment, sever and securit. I will give you 100% web solution.</p>
+       </div> 
+
+    </section>
+    <footer>
+        <p>&copy; Arafat Babu,Hero initiative.</p>
+    </footer>
 </body>
 </html>
